--- a/daily_/.env
+++ b/daily_/.env
@@ -1,1 +1,56 @@
+Skip to content
+ 
+Search Gists
+Search...
+All gists
+Back to GitHub
+@donghangyu37
+donghangyu37/.env Secret
+Created 1 minute ago
+Code
+Revisions
+1
+Clone this repository at &lt;script src=&quot;https://gist.github.com/donghangyu37/a1bba7f13c8c92d381b9a0f578232972.js&quot;&gt;&lt;/script&gt;
+<script src="https://gist.github.com/donghangyu37/a1bba7f13c8c92d381b9a0f578232972.js"></script>
+.env
+API_KEY=c2d9049f9b42873313066ad2407a47b6
+BASE_URL=https://v3.football.api-sports.io
+HOME_ADV=1.10
+ELO_K=20
+# 展示与筛选
+M37_TOP_K=10
+M37_MIN_EV=0.00
 
+# picks.csv / xlsx
+M37_EXPORT_PICKS=1
+M37_EXPORT_PICKS_XLSX=1
+M37_EXCEL_SPLIT_SHEETS=1
+M37_ONE_PICK_PER_FIXTURE=1
+
+# picks 过滤与下注比例
+M37_PICKS_TOP_N=100
+M37_PICKS_MIN_EV=0.05
+M37_PICKS_MIN_KELLY=0.05
+M37_PICKS_MIN_VI=0.00
+M37_KELLY_FRACTION=0.25
+M37_STAKE_CAP_PCT=2.0
+M37_STAKE_MIN_PCT=0.0
+@donghangyu37
+Comment
+There was a problem saving your comment. Your comment can't be blank. Please try again.
+ 
+Leave a comment
+ 
+Footer
+© 2025 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+GitHub Community
+Docs
+Contact
+Manage cookies
+Do not share my personal information
+.env
